syntax = "proto3";

package sum;
option java_package = "com.proto.sum";
option java_multiple_files = true;

message Add{
  int32 first_num = 1;
  int32 second_num = 2;
}

message SumRequest{
  Add add = 1;
}

message SumResponse{
  int32 result = 1;
}

service SumService{
  //Unary
  rpc Sum(SumRequest) returns (SumResponse) {};
}